default css: column headers for numeric columns are right-alignes / numeric sorting: fixed minor bug (null values were sorted last)

--- a/editablegrid.css
+++ b/editablegrid.css
@@ -5,6 +5,10 @@ td.number {
 	white-space: nowrap;
 }
 
+th.number {
+	text-align: right;
+}
+
 td.boolean {
 	text-align: center;
 }
